--- a/index.html
+++ b/index.html
@@ -831,19 +831,19 @@
             <div class="requirements-grid">
                 <div class="requirement-item">
                     <span>CPU:</span>
-                    <span>Intel/AMD dual-core 2GHz+</span>
+                    <span>Intel/AMD dual-core 1GHz+</span>
                 </div>
                 <div class="requirement-item">
                     <span>RAM:</span>
-                    <span>4GB minimum (8GB recommended)</span>
+                    <span>1GB minimum 1.5GB recommended</span>
                 </div>
                 <div class="requirement-item">
                     <span>Storage:</span>
-                    <span>20GB free space</span>
+                    <span>15GB OU 20GB free space</span>
                 </div>
                 <div class="requirement-item">
                     <span>Graphics:</span>
-                    <span>DirectX 11 compatible</span>
+                    <span>DirectX All compatible</span>
                 </div>
             </div>
         </div>
