--- a/index.html
+++ b/index.html
@@ -2,9 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Download NOVA Lite OS - The ultimate optimized operating system for maximum performance and speed">
-    <title>NOVA Lite OS BY ZAKARIA0_DZ - Performance Optimized Operating System</title>
+   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="NOVA LITE OS For Low Pc By ZAKARIA0_DZ">
+  <meta name="keywords" content="NOVA LITE OS">
+  <meta name="author" content="ZAKARIA0_DZ">
+<title>NOVA LITE OS</title>
+ <link rel="icon" href="https://github.com/nova-lite-os-by-zakariadz/NOVA-LITE-OS/blob/main/Icon.png?raw=true" type="image/png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
@@ -29,7 +32,7 @@
             font-family: 'Poppins', 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             text-align: center;
             min-height: 100vh;
-            background: url('https://github.com/ZAKIWEBOS/NOVA-Lite-OS/blob/main/sonu-goku-protector-qp.jpg?raw=true') no-repeat center center fixed;
+            background: url('https://images.hdqwalls.com/download/macos-rancho-cucamonga-5k-ne-5120x2880.jpg') no-repeat center center fixed;
             background-size: cover;
             color: var(--text-light);
             display: flex;
@@ -710,7 +713,7 @@
 </head>
 <body>
     <div id="welcomeSection" class="container active">
-        <img src="https://yt3.googleusercontent.com/KntU2KcRN2NANrHVoUIQeOBNUfYCSi4g_hsHZr34r_hs0LK-r9g-lQjSwIokhMjmrKQJH_uCHA=s160-c-k-c0x00ffffff-no-rj" alt="NOVA OS Logo" class="logo">
+        <img src="https://github.com/nova-lite-os-by-zakariadz/NOVA-LITE-OS/blob/main/Icon.png?raw=true" alt="NOVA OS Logo" class="logo">
         <span class="version-badge">Version 11</span>
         <h1>Welcome to NOVA Lite OS</h1>
         <p>Experience the ultimate optimized operating system designed for speed, performance, and an enhanced gaming experience</p>
@@ -768,7 +771,7 @@
     </div>
     
     <div id="downloadSection" class="container hidden">
-        <img src="https://yt3.googleusercontent.com/KntU2KcRN2NANrHVoUIQeOBNUfYCSi4g_hsHZr34r_hs0LK-r9g-lQjSwIokhMjmrKQJH_uCHA=s160-c-k-c0x00ffffff-no-rj" alt="NOVA OS Logo" class="logo">
+        <img src="https://github.com/nova-lite-os-by-zakariadz/NOVA-LITE-OS/blob/main/Icon.png?raw=true" alt="NOVA OS Logo" class="logo">
         <span class="version-badge">Version 11</span>
         <h1>Download NOVA Lite OS</h1>
         <p>Ready to experience lightning-fast performance? Download NOVA Lite OS now and transform your computing experience.</p>
@@ -871,7 +874,7 @@
     </div>
     
     <div id="featuresSection" class="container hidden">
-        <img src="https://yt3.googleusercontent.com/KntU2KcRN2NANrHVoUIQeOBNUfYCSi4g_hsHZr34r_hs0LK-r9g-lQjSwIokhMjmrKQJH_uCHA=s160-c-k-c0x00ffffff-no-rj" alt="NOVA OS Logo" class="logo">
+        <img src="https://github.com/nova-lite-os-by-zakariadz/NOVA-LITE-OS/blob/main/Icon.png?raw=true" alt="NOVA OS Logo" class="logo">
         <span class="version-badge">Version 11</span>
         <h1>NOVA Lite OS Features</h1>
         <p>Discover why thousands of gamers and professional users choose NOVA Lite OS for the ultimate performance experience</p>
