--- a/index.html
+++ b/index.html
@@ -1576,7 +1576,7 @@ right: 20px;
                 this.disablePrint();
                 this.disableZoom();
                 this.blockExtensions();
-               // this.antiTamper();
+                 this.antiTamper();
                  this.stealthMode();
                 
                 console.log('%c🔒 Ultimate Protection Activated', 'color: red; font-size: 20px; font-weight: bold;');
