--- a/index.html
+++ b/index.html
@@ -37,19 +37,27 @@
       padding: 2rem;
     }
 
-    .logo1 {
-      width: 80px;
-      height: 80px;
-      margin: 0 auto 2rem;
-      background: linear-gradient(45deg, #00d4ff, #00ffcc);
-      border-radius: 50%;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      font-size: 2.5rem;
-      animation: pulse 2s ease-in-out infinite, rotate 3s linear infinite;
-      box-shadow: 0 10px 30px rgba(0, 212, 255, 0.3);
-    }
+
+   .logo1 {
+            width: 120px;
+            height: 120px;
+            margin: 0 auto 2rem;
+            background: rgba(255, 255, 255, 0.1);
+            border-radius: 50%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            font-size: 3rem;
+            backdrop-filter: blur(10px);
+            border: 2px solid rgba(255, 255, 255, 0.2);
+            animation: float 3s ease-in-out infinite;
+        }
+
+        @keyframes float {
+            0%, 100% { transform: translateY(0px); }
+            50% { transform: translateY(-10px); }
+        }
+
 
     .loading-title {
       font-size: 3rem;
